# MYTHOS

./: ADR-001-IMPLEMENTATION-DIRECTION.md  CLAUDE.md  CTVP.md  DEVELOPER_PLAYBOOK.md  DEVLOG.md  Implementation.md  Philosophy.md  RFC-MYTHOS-0001.md  RFC-MYTHOS-0007.md  RFC-MYTHOS-0009-11_AND_ADR0001-2.md  Roadmap.md  WHITE_PAPER.md
.agents/: AGENT-ROADMAP.md  README.md
.github/workflows/: conformance.yml
mythos-v0.2-conformance/: README.md  SPEC.md  manifest.json
mythos-v0.2-conformance/keys/: ed25519_test_public.hex
mythos-v0.2-conformance/vectors/blob/: chunkedblob_001_chunks.json  chunkedblob_001_payload.bin.sha256  chunkedblob_001_rootcid.hex
mythos-v0.2-conformance/vectors/can/: agentid_001.bin.sha256  agentid_001.json  hash_001.bin.sha256  hash_001.json  map_order_001.bin.sha256
mythos-v0.2-conformance/vectors/codebook/: codebook_baseline_id.hex  codebook_baseline_meta.json
mythos-v0.2-conformance/vectors/dataset/: dataset_001_corpus_rootnode.bin.sha256  dataset_001_def.bin.sha256  dataset_001_defid.hex  dataset_001_manifest_rootcid.hex  dataset_001_selected.json
mythos-v0.2-conformance/vectors/ledger/: ledger_001.json  ledger_001_commit.bin.sha256  ledger_001_idemid.hex  (+1 more)
runtime/: .gitignore  Cargo.toml  NEXT.md  PR_DESCRIPTION.md  REVIEW.md
runtime/libs/executor/: Cargo.toml
runtime/libs/mythos-blob/: Cargo.toml
runtime/libs/mythos-blob/src/: lib.rs  types.rs  validation.rs
runtime/libs/mythos-blob/tests/: blob_001.rs
runtime/libs/mythos-can/: Cargo.toml
runtime/libs/mythos-can/src/: decoder.rs  encoder.rs  error.rs  lib.rs  value.rs  varint.rs
runtime/libs/mythos-can/tests/: negative.rs  vectors.rs
runtime/libs/mythos-codebook/: Cargo.toml
runtime/libs/mythos-codebook/src/: lib.rs
runtime/libs/mythos-codebook/tests/: codebook_001.rs
runtime/libs/mythos-dataset/: Cargo.toml
runtime/libs/mythos-dataset/src/: lib.rs
runtime/libs/mythos-dataset/tests/: dataset_001.rs
runtime/libs/mythos-hash/: Cargo.toml
runtime/libs/mythos-hash/src/: hash.rs  idempotency.rs  lib.rs  receipt.rs
runtime/libs/mythos-hash/tests/: evidence_semantics.rs
runtime/libs/mythos-ledger/: Cargo.toml
runtime/libs/mythos-merkle/: Cargo.toml
runtime/libs/mythos-merkle/src/: lib.rs  types.rs  validation.rs
runtime/libs/mythos-merkle/tests/: decode_leaf.rs  merkle_001.rs  order_matters.rs
runtime/libs/mythos-receipts/: Cargo.toml
runtime/libs/mythos-wire/: Cargo.toml
runtime/libs/mythos-wire/src/: lib.rs
runtime/libs/mythos-x/: Cargo.toml
runtime/tools/ctvp-runner/: Cargo.toml  IMPLEMENTATION.md
runtime/tools/ctvp-runner/src/: cli.rs  lib.rs  main.rs  manifest.rs  report.rs  suite.rs
runtime/tools/ctvp-runner/src/verify/: blob.rs  can.rs  codebook.rs  dataset.rs  ledger.rs  merkle.rs  mod.rs  receipts.rs  utils.rs  wire.rs
runtime/tools/ctvp-runner/tests/: edge_cases.rs  integration.rs  unknown_prefix.rs
(+6 files in other folders)
