[package]
name = "mythos-can"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
sha2 = "0.10"
serde_json = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[test]]
name = "vectors"
path = "tests/vectors.rs"
required-features = []
