[package]
name = "mythos-merkle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mythos-can = { path = "../mythos-can" }
mythos-hash = { path = "../mythos-hash" }
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex = "0.4"
