[package]
name = "ctvp-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
walkdir = "2.5"

# Workspace dependencies
mythos-can = { path = "../../libs/mythos-can" }
mythos-hash = { path = "../../libs/mythos-hash" }
mythos-merkle = { path = "../../libs/mythos-merkle" }
mythos-blob = { path = "../../libs/mythos-blob" }
mythos-dataset = { path = "../../libs/mythos-dataset" }
mythos-codebook = { path = "../../libs/mythos-codebook" }
mythos-wire = { path = "../../libs/mythos-wire" }

[lib]
name = "ctvp_runner"
path = "src/lib.rs"

[[bin]]
name = "ctvp-runner"
path = "src/main.rs"
